# chess-club

./: .gitignore  Cargo.toml  LICENSE  package.json  tailwind.config.cjs
public/styles/: main.css
public/templates/: about.html  base.html  home.html
src/: router.rs
src/lib/: handlers.rs  html.rs  lib.rs  nostr.rs
